--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     }
   },
   "dependencies": {
+    "ant-design-vue": "^1.6.5",
     "axios": "^0.18.0",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
