--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
       ]
     },
     "mac": {
-      "icon": "build/icons/icon.icns"
+      "icon": "build/icons/icon.icns",
+      "target": "pkg"
     },
     "win": {
-      "icon": "build/icons/icon.ico"
+      "icon": "build/icons/icon.ico",
+      "target": "exe"
     },
     "linux": {
       "icon": "build/icons"
